[package]
name = "parallel-proposer"
version = "0.1.0"
edition = "2021"
description = "Parallel block proposal with GPU-accelerated signature verification"
license = "Apache-2.0"
repository = "https://github.com/Cyptopimpinainteazy/x3-chain"
keywords = ["blockchain", "parallel", "gpu", "signature", "verification"]

[dependencies]
anyhow = "1.0"
blake3 = "1.0"
codec = { workspace = true }
contention-predictor = { path = "../contention-predictor" }
futures = "0.3"
log = "0.4"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../patches/substrate-prometheus-endpoint" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-client-api = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool-api = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
rayon = "1.8"
libloading = "0.8"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"
rand = "0.8"
hex = { version = "0.4.3", default-features = false }
x3-chain-runtime = { path = "../../runtime", features = ["std", "native-real-vm-adapters"] }
[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
