[package]
name = "private-mempool"
version = "0.1.0"
edition = "2021"
description = "Encrypted mempool for private transaction processing — threshold encryption, fee-ordered queuing, and enclave integration"
authors = ["X3 Chain Team"]
license = "MIT"
repository = "https://github.com/x3-chain/x3-chain"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hkdf = "0.12"
blake3 = "1.5"

# Metrics & logging
tracing = "0.1"

# Utils
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
