[package]
name = "quantum-crypto"
version = "0.1.0"
edition = "2021"
description = "Quantum-Resistant Cryptography for X3 Chain - Post-quantum security primitives"
license = "MIT"
authors = ["X3 Chain Team"]

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptographic primitives
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
subtle = "2.6"

# Encoding
hex = "0.4"
base64 = "0.22"

# Logging
tracing = "0.1"
log = "0.4"

[dev-dependencies]
criterion = "0.5"

# Benchmark commented out until needed
# [[bench]]
# name = "quantum_bench"
# harness = false
