[package]
name = "x3-accounting-events"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Canonical accounting event types and emission trait for the X3 revenue spine"

[lib]
crate-type = ["rlib"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde",
    "serde/std",
]
