[package]
name = "x3-asset-kernel-types"
version = "0.1.0"
authors = ["X3 Chain Core Team <core@x3-chain.io>"]
description = "Shared types for the X3 Universal Asset Kernel: canonical AssetId, DomainId, AccountBytes, transfer messages, routes, and supply ledger primitives. Versioned, domain-separated, no_std."
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde",
    "serde/std",
]
