[package]
name = "x3-atomic-client"
version = "0.1.0"
edition = "2021"
description = "Rust client library for X3 atomic bundle submission, proof retrieval, and finalization subscription"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
codec = { package = "parity-scale-codec", version = "3.6.5", features = ["derive"] }
jsonrpsee = { version = "0.22", features = ["ws-client", "http-client"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
