[package]
name = "x3-bridge-adapters"
version = "0.1.0"
edition = "2021"
description = "Substrate-backed implementations of x3-vm BalanceProvider and CrossVmEscrow traits"
license = "Apache-2.0"
authors = ["X3 Labs"]

[dependencies]
x3-vm = { path = "../x3-vm" }
x3-cross-vm-bridge = { path = "../cross-vm-bridge" }
pallet-x3-kernel = { path = "../../pallets/x3-kernel" }

# Substrate node-side
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-api          = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-blockchain   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-runtime      = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-core         = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-io           = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
codec           = { package = "parity-scale-codec", version = "3.6.5", features = ["derive"] }

# Logging
log = "0.4"

# SHA-256 for escrow tickets
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
