[package]
name = "x3-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for X3 Chain blockchain development"
authors = ["X3 Chain Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/x3-chain/x3-chain"
keywords = ["blockchain", "cli", "substrate", "evm", "svm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "x3"
path = "src/main.rs"

[features]
default = []
full = ["sdk"]
sdk = ["x3-sdk"]

[dependencies]
# SDK (optional - only needed for deploy, simulate, tx, account commands)
x3-sdk = { path = "../x3-sdk", optional = true }

# X3 Compiler
x3-compiler = { path = "../x3-compiler" }

# X3 VM (for REPL)
x3-vm = { path = "../x3-vm" }

# X3 Parser (for REPL type checking)
x3-parser = { path = "../x3-parser" }

# X3 Optimizer (for OptLevel)
x3-opt = { path = "../x3-opt" }

# X3 Orchestrator (cross-VM routing demo + integration)
x3-orchestrator = { path = "../x3-orchestrator" }

# CLI framework
clap = { workspace = true, features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "process"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# File handling
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Hex encoding
hex = "0.4"

# Templating for code generation
handlebars = "5.1"

[dev-dependencies]
tempfile = "3.8"
