[package]
name = "x3-constitution"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "X3 Constitutional invariant engine — machine-verifiable system constitution"

[dependencies]
x3-proof = { path = "../x3-proof" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
