[package]
name = "x3-crosschain-intent"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "X3 Cross-Chain Intent System — user-facing intent language, compiler, state machine, and safety checks"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
serde_json = "1.0"
