# X3 Chain DNS Server - .x3 TLD Authoritative DNS Server
[package]
name = "x3-dns-server"
version = "0.1.0"
edition = "2021"
authors = ["X3 Chain Team"]
description = "Authoritative DNS server for .x3 TLD with blockchain integration"
license = "MIT"
repository = "https://github.com/Cyptopimpinainteazy/x3-chain"

[dependencies]
# Core DNS dependencies — pinned exact to prevent Cargo resolving to beta.1 which has rand 0.10 API breakage
hickory-server = "=0.26.0-alpha.1"
hickory-resolver = "=0.26.0-alpha.1"
hickory-proto = "=0.26.0-alpha.1"
hickory-client = "=0.26.0-alpha.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Data structures and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }

# Blockchain integration
parity-scale-codec = "3.6"
sp-core = { workspace = true, default-features = false, features = ["std"] }
sp-runtime = { workspace = true, default-features = false, features = ["std"] }

# Networking and HTTP
axum = "0.7"
tower = "0.4"
hyper = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Cryptography for DNSSEC
ring = "0.17.12"
ed25519-dalek = "2.1"
secp256k1 = { version = "0.27", features = ["recovery"] }
sha2 = "0.10"

# Configuration and logging
config = "0.13"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

# Utilities
rand = "0.8"
hex = "0.4"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Monitoring and metrics
prometheus = "0.14.0"
metrics = "0.22"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[features]
default = ["sqlite", "postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[[bin]]
name = "x3-dns-server"
path = "src/main.rs"
