[package]
name = "x3-fees"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "X3 Fee Curve Engine — vector-based dynamic fee calculation"

[features]
default = ["std"]
std = [
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0"
bincode = "1.3"
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
proptest = "1.4"
